# rusty-clock

./: .gdbinit  .travis.yml  Cargo.toml  LICENSE  README.md  gallery.md  openocd.gdb  openocd.sh
.cargo/: config
cad/: back-panel.fcstd  back-panel.fcstd1  back-panel.stl  box.fcstd  box.fcstd1  box.stl
cad/box-v1/: back-panel.stl  box.fcstd  box.stl
cad/box-v2/: alarm-clock.scad  back-printing.scad  back.scad  back.stl  battery.scad  blue-pill.scad  box-printing.scad  box.scad  box.stl  button.scad  epaper.scad  params.scad  screws.scad  speaker.scad  utils.scad
portable/: Cargo.toml
portable/src/: alarm.rs  button.rs  datetime.rs  lib.rs
portable/src/ui/: header.rs  menu.rs  mod.rs  seven_segments.rs  state.rs
src/: alarm.rs  alarm_manager.rs  button.rs  main.rs  msg_queue.rs  sound.rs  ui.rs
src/ui/: header.rs  menu.rs  mod.rs  seven_segments.rs  state.rs
