[package]
name = "rusty-clock"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[workspace]

[dependencies]
stm32f1xx-hal = { version = "0.2", features = ["rt", "stm32f103" ] }
cortex-m = "0.5"
#cortex-m-rt = { version = "0.6", features = ["device"] }
cortex-m-rtfm = "0.4.0"
panic-semihosting = "0.5"
bme280 = "0.1.1"
pwm-speaker = { git = "https://github.com/TeXitoi/pwm-speaker", branch = "master" }
epd-waveshare = { version = "0.3.2", features = ["type_a_alternative_faster_lut"] }
embedded-hal = "0.2.1"
portable = { path = "portable" }

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
